--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <div class="left">
+            <div class="logo">
+                Header logo 
+            </div>    
+        </div>
+        <div class="right">
+            <ul class="links">    
+                <a href="">Link one</a>
+                <a href="">Link two</a>
+                <a href="">Link three</a>
+            </ul>    
+        </div>
+        <h1>This website is awesome</h1>
+        <p>This Website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button class="sign-up-button">Sign up</button>
+        <div class="main-image">
+            <img src="" alt="">
+        </div>
+    </div>
+    <div class="information">
+        Some random information
+    </div>
+    <div class="container">
+        <div class="info">
+            <img src="" alt="">
+            <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="" alt="">
+            <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="" alt="">
+            <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="" alt="">
+            <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
+    <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
+        or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
+    <p class="author">-Thor, God of Thunder</p>
+    <div class="modal">
+        <div class="sign-up-reminder">
+            <div class="sign-up"> Call to action! It's time!</div>
+            <div class="sign-up-pointer"> Sign up for our product by clicking that button right over there!</div>
+            <button class="sign-up-button"> Sign up </button>
+        </div>    
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2023
+    </div>
     
 </body>
 </html>
