css-header git commit

--- a/index.html
+++ b/index.html
@@ -8,44 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="left">
-            <div class="logo">
-                Header logo 
-            </div>    
+    <div class="container">   
+        <nav class="header">
+            <div class="left">
+                <div class="logo">
+                    Header logo 
+                </div>    
+            </div>
+            <div class="right">
+                <ul class="links">    
+                    <li><a href="">Header link one</a></li>
+                    <li><a href="">Header link two</a></li>
+                    <li><a href="">Header link three</a></li>
+                </ul>    
+            </div>
+        </nav>
+                    
+        <div class="hero">
+            <div class="hero-text">
+            <h1>This website is awesome</h1>
+            <p>This Website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="hero-btn">Sign up</button>
+            </div>
+            <div class="hero-image">
+                <img src="./img/sample1.jpg" alt="snowy mountain">
+            </div>
         </div>
-        <div class="right">
-            <ul class="links">    
-                <a href="">Link one</a>
-                <a href="">Link two</a>
-                <a href="">Link three</a>
-            </ul>    
-        </div>
-        <h1>This website is awesome</h1>
-        <p>This Website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button class="sign-up-button">Sign up</button>
-        <div class="main-image">
-            <img src="" alt="">
-        </div>
-    </div>
+    </div>   
+        <!--
+    ----------------------------------------- 
     <div class="information">
         Some random information
     </div>
     <div class="container">
         <div class="info">
-            <img src="" alt="">
+            <img src="./img/info-img-1.jpg" alt="">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-            <img src="" alt="">
+            <img src="./img/info-img-2.jpg" alt="">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-            <img src="" alt="">
+            <img src="./img/info-img-3.jpg" alt="">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-            <img src="" alt="">
+            <img src="./img/info-img-4.jpg" alt="">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
     </div>
@@ -62,6 +71,7 @@
     <div class="footer">
         Copyright © The Odin Project 2023
     </div>
+    -->
     
 </body>
 </html>
