--- a/index.html
+++ b/index.html
@@ -35,29 +35,30 @@
             </div>
         </div>
     </div>   
-        <!--
+
+    <div class="information">       
+        <h2>Some random information</h2>
+        <div class="info-container">
+            <div class="info">
+                <img src="./img/info-img-1.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./img/info-img-2.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./img/info-img-3.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <img src="./img/info-img-4.jpg" alt="">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+            <!--
     ----------------------------------------- 
-    <div class="information">
-        Some random information
-    </div>
-    <div class="container">
-        <div class="info">
-            <img src="./img/info-img-1.jpg" alt="">
-            <div class="text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="info">
-            <img src="./img/info-img-2.jpg" alt="">
-            <div class="text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="info">
-            <img src="./img/info-img-3.jpg" alt="">
-            <div class="text">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="info">
-            <img src="./img/info-img-4.jpg" alt="">
-            <div class="text">this is some subtext under an illustration or image</div>
-        </div>
-    </div>
     <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
         or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
     <p class="author">-Thor, God of Thunder</p>
