--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
             </div>
         </div>
     </div>
-            <!--
-    ----------------------------------------- 
-    <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
-        or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
-    <p class="author">-Thor, God of Thunder</p>
+    <div class="quote">       
+        <p> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, 
+            or maybe people will actually read it. Who knows? All i know is that it looks nice</p>
+        <p class="author">-Thor, God of Thunder</p>
+    </div>     
     <div class="modal">
-        <div class="sign-up-reminder">
-            <div class="sign-up"> Call to action! It's time!</div>
-            <div class="sign-up-pointer"> Sign up for our product by clicking that button right over there!</div>
-            <button class="sign-up-button"> Sign up </button>
-        </div>    
+            <div class="sign-up-reminder">
+                <div class="sign-up"> Call to action! It's time!</div>
+                <div class="sign-up-pointer"> Sign up for our product by clicking that button right over there!</div>
+            </div> 
+            <button class="sign-up-button"> Sign up </button>   
     </div>
+
     <div class="footer">
         Copyright © The Odin Project 2023
     </div>
-    -->
-    
+
 </body>
 </html>
